--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <footer>
             Serving the Greater Merrimack Valley since the 1952<br>
             Thank you for letting us be part of your story.
-            <p>>Tingas & Cocalis Family's</p>
+            <p>Tingas & Cocalis Family's</p>
         </footer>
     </div>
 </body>
